force-app/main/default/objects/TPM_SalesOrg_Hierarchy_For_Promotion__mdt/TPM_SalesOrg_Hierarchy_For_Promotion__mdt.object-meta.xml
<CustomObject>
    <label>SalesOrg_Hierarchy For Promotion</label>
    <pluralLabel>SalesOrg_Hierarchy For Promotions</pluralLabel>
</CustomObject>