force-app/main/default/objects/TPM_SalesOrg_Hierarchy_For_Promotion__mdt/fields/TPM_Account_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>TPM_Account_Plan_Type__c</fullName>
    <label>Account Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>