force-app/main/default/objects/TPM_SalesOrg_Hierarchy_For_Promotion__mdt/fields/TPM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>