force-app/main/default/objects/TPM_SalesOrg_Hierarchy_For_Promotion__mdt/fields/TPM_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>TPM_Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SuperGroup</fullName>
                <default>true</default>
                <label>SuperGroup</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Managed Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>