force-app/main/default/objects/TPM_SalesOrg_Hierarchy_For_Promotion__mdt/fields/TPM_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US01</fullName>
                <default>true</default>
                <label>US01</label>
            </value>
            <value>
                <fullName>IT01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>